--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-15 17:43:32
+ * @since 2021-08-15 20:16:36
  */
  -->
  <!DOCTYPE html>
@@ -38,12 +38,12 @@
         <div class="layui-row form-row">
 
              <!--开始：group 循环-->
-            <div class="layui-col-xs4 form-column">
+            <div class="layui-col-xs6 form-column">
 
 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('分类')}">分类</div><div class="layui-required">*</div></div>
-                        <div class="layui-input-block ">
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('分类')}">分类</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
                             <div id="categoryId" input-type="select" th:data="${'/service-eam/eam-category/query-paged-list'}"></div>
                         </div>
                     </div>
@@ -51,26 +51,17 @@
 
                 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('状态')}">状态</div></div>
-                        <div class="layui-input-block ">
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('状态')}">状态</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
                             <div id="status" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}"></div>
                         </div>
                     </div>
 
 
                 
-                    <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('物品档案')}">物品档案</div><div class="layui-required">*</div></div>
-                        <div class="layui-input-block ">
-                            <div id="goodsId" input-type="select" th:data="${'/service-eam/eam-goods/query-list'}"></div>
-                        </div>
-                    </div>
-
-
-                
                 <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('序列')}">序列</div></div>
-                    <div class="layui-input-block ">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('序列')}">序列</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="serialNumber" id="serialNumber" name="serialNumber" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('序列') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -78,72 +69,17 @@
 
                 
                 <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('备注')}">备注</div></div>
-                    <div class="layui-input-block ">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('备注')}">备注</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="notes" id="notes" name="notes" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('备注') }" type="text" class="layui-input"   />
                     </div>
                 </div>
 
 
-                <!--结束：栏次内字段循环-->
-            </div>
-             <!--开始：group 循环-->
-            <div class="layui-col-xs4 form-column">
-
-
-                <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('名称')}">名称</div></div>
-                    <div class="layui-input-block ">
-                        <input lay-filter="name" id="name" name="name" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"   />
-                    </div>
-                </div>
-
-
-                
-                    <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('厂商')}">厂商</div><div class="layui-required">*</div></div>
-                        <div class="layui-input-block ">
-                            <div id="manufacturerId" input-type="select" th:data="${'/service-eam/eam-manufacturer/query-list'}"></div>
-                        </div>
-                    </div>
-
-
                 
                 <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('规格型号')}">规格型号</div></div>
-                    <div class="layui-input-block ">
-                        <input lay-filter="model" id="model" name="model" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('规格型号') }" type="text" class="layui-input"   />
-                    </div>
-                </div>
-
-
-                
-                    <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('品牌')}">品牌</div><div class="layui-required">*</div></div>
-                        <div class="layui-input-block ">
-                            <div id="brandId" input-type="select" th:data="${'/service-eam/eam-brand/query-list'}"></div>
-                        </div>
-                    </div>
-
-
-                <!--结束：栏次内字段循环-->
-            </div>
-             <!--开始：group 循环-->
-            <div class="layui-col-xs4 form-column">
-
-
-                <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('单位')}">单位</div></div>
-                    <div class="layui-input-block ">
-                        <input lay-filter="unit" id="unit" name="unit" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('单位') }" type="text" class="layui-input"   />
-                    </div>
-                </div>
-
-
-                
-                <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('图片')}">图片</div></div>
-                    <div class="layui-upload layui-input-block ">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('图片')}">图片</div></div>
+                    <div class="layui-upload layui-input-block layui-input-block-c1">
                         <input input-type="upload" id="pictureId"  name="pictureId" lay-filter="pictureId" style="display: none">
                         <button type="button" class="layui-btn" id="pictureId-button" th:text="${lang.translate('选择附件')}">选择附件</button>
                         <div class="layui-upload-list" id="pictureId-file-list"></div>
@@ -152,26 +88,11 @@
 
 
 
-                <!--结束：栏次内字段循环-->
-            </div>
-            <!--结束：栏次输入框循环-->
-        </div>
-         <!--开始：group 循环-->
-
-        <fieldset class="layui-elem-field layui-field-title form-group-title">
-            <legend>所属信息</legend>
-        </fieldset>
-
-        <div class="layui-row form-row">
-
-             <!--开始：group 循环-->
-            <div class="layui-col-xs6 form-column">
-
-
+                
                 <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('资产编号')}">资产编号</div></div>
-                    <div class="layui-input-block ">
-                        <input lay-filter="assetCode" id="assetCode" name="assetCode" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('资产编号') }" type="text" class="layui-input"   />
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('资产RFID')}">资产RFID</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input lay-filter="rfid" id="rfid" name="rfid" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('资产RFID') }" type="text" class="layui-input"   />
                     </div>
                 </div>
 
@@ -182,10 +103,55 @@
             <div class="layui-col-xs6 form-column">
 
 
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('物品档案')}">物品档案</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <div id="goodsId" input-type="select" th:data="${'/service-eam/eam-goods/query-list'}"></div>
+                        </div>
+                    </div>
+
+
+                
                 <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('详细位置')}">详细位置</div></div>
-                    <div class="layui-input-block ">
-                        <input lay-filter="positionDetail" id="positionDetail" name="positionDetail" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('详细位置') }" type="text" class="layui-input"   />
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('名称')}">名称</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input lay-filter="name" id="name" name="name" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"   />
+                    </div>
+                </div>
+
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('厂商')}">厂商</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <div id="manufacturerId" input-type="select" th:data="${'/service-eam/eam-manufacturer/query-list'}"></div>
+                        </div>
+                    </div>
+
+
+                
+                <div class="layui-form-item" >
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('规格型号')}">规格型号</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input lay-filter="model" id="model" name="model" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('规格型号') }" type="text" class="layui-input"   />
+                    </div>
+                </div>
+
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('品牌')}">品牌</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <div id="brandId" input-type="select" th:data="${'/service-eam/eam-brand/query-list'}"></div>
+                        </div>
+                    </div>
+
+
+                
+                <div class="layui-form-item" >
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('单位')}">单位</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input lay-filter="unit" id="unit" name="unit" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('单位') }" type="text" class="layui-input"   />
                     </div>
                 </div>
 
