--- a/eam/common/generator/src/main/resources/templates/ApiController.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ApiController.java.vm
@@ -144,16 +144,9 @@ public class #(simpleName) extends SuperController {
 	public Result<#(poSimpleName)> getById(#(controllerMethodParameterDeclare4GetById)) {
 		Result<#(poSimpleName)> result=new Result<>();
 		#(poSimpleName) #(poVarName)=#(serviceVarName).getById(#(controllerMethodParameterPassIn4GetById));
-		#for(f : fields)
-		#if(f.typeName.equals("select_box"))
-		#if(f.selectField.enumTypeName!=null)
-		#else
-		#if(f.selectField.fillByConstName!=null)
-		// 关联出 #(f.labelInList) 数据
-		#(serviceVarName).join(#(poVarName),#(poMetaClassName).#(f.selectField.fillByConstName));
-		#end
-		#end
-		#end
+		#for(f : joinPropertyConsts)
+		// 关联出 #(f.label) 数据
+		#(serviceVarName).join(#(poVarName),#(poMetaClassName).#(f.constName));
 		#end
 		result.success(true).data(#(poVarName));
 		return result;
@@ -218,16 +211,9 @@ public class #(simpleName) extends SuperController {
 	public Result<PagedList<#(poSimpleName)>> queryPagedList(#(voSimpleName) sample) {
 		Result<PagedList<#(poSimpleName)>> result=new Result<>();
 		PagedList<#(poSimpleName)> list=#(serviceVarName).queryPagedList(sample,sample.getPageSize(),sample.getPageIndex());
-		#for(f : fields)
-		#if(f.typeName.equals("select_box"))
-		#if(f.selectField.enumTypeName!=null)
-		#else
-		#if(f.selectField.fillByConstName!=null)
-		// 关联出 #(f.labelInList) 数据
-		#(serviceVarName).join(list,#(poMetaClassName).#(f.selectField.fillByConstName));
-		#end
-		#end
-		#end
+		#for(f : joinPropertyConsts)
+		// 关联出 #(f.label) 数据
+		#(serviceVarName).join(list,#(poMetaClassName).#(f.constName));
 		#end
 		result.success(true).data(list);
 		return result;
