--- a/eam/common/generator/src/main/resources/templates/list.html.vm
+++ b/eam/common/generator/src/main/resources/templates/list.html.vm
@@ -144,7 +144,7 @@
     <a th:if="${perm.checkAuth('#(authPrefix):delete')}" class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
     #end
     #for(b:opColumnButtons)
-    <a class="layui-btn layui-btn-xs" lay-event="#(b.id)" th:text="${lang.translate('#(b.title)')}">#(b.title)</a>
+    <a class="layui-btn layui-btn-xs" lay-event="#(b.id)" th:text="${lang.translate('#(b.label)')}">#(b.label)</a>
     #end
 </script>
 
