--- a/eam/common/generator/src/main/resources/templates/list.js.vm
+++ b/eam/common/generator/src/main/resources/templates/list.js.vm
@@ -47,6 +47,16 @@ function ListPage() {
 		fox.adjustSearchElement();
 		//
 		function renderTableInternal() {
+			var ps={};
+			var contitions={};
+			#if(beforeQueryFunc!=null)
+			#(beforeQueryFunc.name)(contitions);
+			if(Object.keys(contitions).length>0) {
+				ps = {searchField: "$composite", searchValue: JSON.stringify(contitions)};
+			}
+			#end
+
+
 			var h=$(".search-bar").height();
 			dataTable=fox.renderTable({
 				elem: '#data-table',
@@ -55,6 +65,7 @@ function ListPage() {
 				url: moduleURL +'/query-paged-list',
 				height: 'full-'+(h+28),
 				limit: 50,
+				where: ps,
 				#if(isTree)
 				//树形结构需要传递相关参数
 				where: { #(parentIdVar) : #(parentIdVar) } ,
@@ -175,6 +186,9 @@ function ListPage() {
 		value.#(f.varName)={ value: $("##(f.varName)").val()#if(f.search!=null && f.search.fuzzySearch) ,fuzzy: true,valuePrefix:"#(f.search.valuePrefix)",valueSuffix:"#(f.search.valueSuffix) "#end};
 		#end
 		#end
+		#end
+		#if(beforeQueryFunc!=null)
+		#(beforeQueryFunc.name)(value);
 		#end
 		var ps={searchField: "$composite", searchValue: JSON.stringify(value)};
 		if(sortField) {
@@ -449,6 +463,7 @@ function ListPage() {
         	#if(isTree) 
         	data.#(parentIdVar)=#(parentIdVar);
         	#end
+			admin.putTempData('#(formDataKey)-form-action', "create",true);
             showEditForm(data);
         };
 		
@@ -580,6 +595,10 @@ function ListPage() {
 	 * #(b.label) 操作
 	 */
 	#(b.jsFunction.source)
+	#end
+
+	#if(beforeQueryFunc!=null)
+	#(beforeQueryFunc.source);
 	#end
 
 };
